--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 	<![endif]-->
 </head>
 <body>
+
+	<header>
+		<h1>InitialApply Blog</h1>
+	</header>
+	<aside>
+		<p>
+	</aside>
+	<section>
+	</section>
+	<footer>
+		<p>© 2020 - designed by <a href="http://www.Initialsurname.org" title="Blog of Initial Surname">Initialsurname</a></p>
+	</footer>
+
 </body>
 </html>
 
